--- a/Template.html
+++ b/Template.html
@@ -308,4 +308,42 @@
         <script type="module" src="rerunServer.js"></script> 
         <script type="module" src="rerunCalc.js"></script> 
     </body>
+    <!-- from https://codepen.io/scanfcode/pen/MEZPNd -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>About</h6>
+            <p class="text-justify">MammalWeb is run by the not-for-profit organisation, MammalWeb Limited. Material on this website is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>, unless otherwise stated on the website. <a href="https://www.mammalweb.org/index.php?option=com_content&amp;view=article&amp;id=633">Terms and Conditions</a></p>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Socials</h6>
+            <ul class="footer-links">
+              <li><a href="https://www.facebook.com/MammalWeb">Facebook</a></li>
+              <li><a href="https://twitter.com/mammalweb?lang=en">Twitter</a></li>
+              <li><a href="https://www.youtube.com/channel/UCZ0rBgdVtZRuWg8AyZUWt4A">YouTube</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Quick Links</h6>
+            <ul class="footer-links">
+              <li><a href="https://www.mammalweb.org/en/about/about-mammalweb">About Us</a></li>
+              <li><a href="mailto:info@mammalweb.org">Contact Us at info@mammalweb.org</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; ... All Rights Reserved by 
+         <a href="#">MammalWeb</a>.
+            </p>
+
+        </div>
+      </div>
+</footer>
 </html>
