moved upload and change colour buttons but still need formatting

--- a/Template.html
+++ b/Template.html
@@ -75,12 +75,6 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">LOGOUT</a>
                   </li>
-                  <li class="nav-item">
-                    <button class="colour-change" onclick="toggleTheme()">CHANGE COLOUR</button>
-                  </li>
-                  <li class="nav-item">
-                    <button class="colour-change" id = "upload" onclick = "upload()" >UPLOAD</button>
-                  </li>
                 </ul>
               </div>
             </div>
@@ -88,6 +82,8 @@
 
           <div ><div id = "uploadWindow" class = image></div>
             <img src="./images/TitleImg.png" height = 150 width = 600 >
+            <button class="colour-change2" id = "upload" onclick = "upload()" >UPLOAD</button>
+            <button class="colour-change2" onclick="toggleTheme()">CHANGE COLOUR</button>
           <div id = title-top>
           </div>
 
