--- a/Template.html
+++ b/Template.html
@@ -81,7 +81,7 @@
           </nav>
 
           <div ><div id = "uploadWindow" class = image></div>
-            <img src="./images/TitleImg.png" height = 150 width = 600 >
+            <img class="center" id = "titleImg" src="./images/TitleImg.png"  >
             <button class="colour-change2" id = "upload" onclick = "upload()" >UPLOAD</button>
             <button class="colour-change2" onclick="toggleTheme()">CHANGE COLOUR</button>
           <div id = title-top>
