--- a/Template.html
+++ b/Template.html
@@ -222,6 +222,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI4_title">Quantity/quality/coverage of data in </h4>
+                    <h6 class = "description" id = "timestamp4"> </h6>
                     <h6 class = "description" > UK number and proportion of 10k cells for which we have some records </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The quantity/quality/coverage of data KPI represents the metadata about all the sightings and images uploaded. As MammalWeb “help(s) monitor wild mammals across the UK and in continental Europe”, and most classifications occur in the UK, a map of the UK which is divided into 10k cells portrays the data on the top 5 animals classified within the specified longitude square. The map is interactive and allows you to see all the animals that have been spotted in the specified area, if no sightings were seen in the specific cell no data is portrayed and you get a message explaining so. 
 
@@ -306,6 +307,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI5_title">Impact</h4>
+                    <h6 class = "description" id = "timestamp5"> </h6>
                     <h6 class = "description" > Number of peer-reviewed papers using data from MammalWeb </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The ‘Impact’ KPI represents data in retrospect to the impact that MammalWeb and its data have created in the wider community. This would include data about the number of peer-reviewed papers and citations which have used data from MammalWeb’s website. Records submitted to ERIC/NBN/GBIF are also portrayed in a table. ">
                     </a>
@@ -394,6 +396,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI6_title">Funding</h4>
+                    <h6 class = "description" id = "timestamp6"> </h6>
                     <h6 class = "description" > Number of Grants and Contracts </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="MammalWeb has always been grateful for all the support and contracts they have received. The funding KPI has three specific sections, the first being the total number of grants and contracts received, over the last year. The total value of the grants received is portrayed as a line graph over the past few years and the final table portrays all the other income for MammalWeb, including advertising, sponsorship, donations and subscriptions seen in a bar chart per section. All the currencies are portrayed in GBP (£).">
                     </a>
